--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-bootstrap": "^0.32.32",
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
