--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "start-server-and-test start http://127.0.0.1:5173/ cypress",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/cypress": "^1.1.3",
     "@types/react-bootstrap": "^0.32.32",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.62.0"
   },
   "devDependencies": {
@@ -27,8 +32,10 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "cypress": "^12.10.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
