--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.0"
