--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "cypress": "^12.10.0",
     "eslint": "^8.38.0",
+    "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-react": "^7.32.2",
     "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
